# asd-labs

./: .gitignore  LICENSE
1/res/: diag1.drawio
1/src/: a.c  b.c
10/: Cargo.toml
10/res/: main.tex
10/src/: graph.rs  main.rs
2/src/: a.c  b.c
3/src/: main.c
4/src/: main.c
5/src/: main.c
6/src/: main.c
7/: CMakeLists.txt
7/src/: a.c  main.c
8/: CMakeLists.txt
8/res/: main.tex
8/src/: input.c  input.h  linkedlist.c  linkedlist.h  main.c
9/res/: main.tex
9/src/: draw.rs  main.rs
lab1.1/: CMakeLists.txt
lab1.1/res/: diag2.drawio
lab1.1/src/: a.c
lab1.2/: CMakeLists.txt
lab1.2/src/: a.c  b.c
lab1.3/: CMakeLists.txt
lab1.4/: CMakeLists.txt
lab1.4/res/: test.rec
lab1.5/: CMakeLists.txt
lab1.6/: CMakeLists.txt  test.sh
lab2.1/: CMakeLists.txt
lab2.1/res/: main.tex
lab2.1/src/: b.c  c.c  input.c  input.h  linear.c
lab2.2/src/: input.c  input.h  linkedlist.c  linkedlist.h  main.c
lab2.3/: Cargo.toml
lab2.3/src/: graph.rs  main.rs
lab2.5/: Cargo.toml
lab2.5/res/: main.tex
lab2.5/src/: draw.rs  graph.rs  main.rs
lab2.6/: Cargo.toml
lab2.6/res/: main.tex
lab2.6/src/: draw.rs  graph.rs  main.rs
modular/: CMakeLists.txt
modular/src/: main.c
